<resources>
    <string name="app_name">Dsb Forsinket</string>

    <string name="drawer_departures">Departures</string>
    <string name="drawer_settings">Settings</string>

    <string name="error_text">Could not get the departures :(</string>

    <string name="button_try_again">Try again</string>

    <string name="preferences_stations_key">preferences_stations_key</string>
    <string name="preferences_stations_title">Your station</string>

    <string name="preferences_notification_key">preferences_notification_key</string>
    <string name="preferences_notification_title">Push notifications</string>
    <string name="preferences_notification_summary">Get notified if some trains are delayed in the selected time range (only Monday-Friday)</string>

    <string name="preferences_notification_times">preferences_notification_times</string>
    <string name="preferences_notification_times_title">Notification times</string>
    <string name="preferences_notification_times_summary">When do you want to get notifications</string>

    <string name="notification_gcm_id"></string>
    <string name="notification_gcm_content">Configuring push notifications.</string>
    <string name="notification_gcm_failure_id"></string>
    <string name="notification_gcm_failure_content">Failed to configure push notifications.</string>

    <string name="notification_delay_id"></string>
    <string name="notification_delay_stop">Disable for 60 min</string>

    <plurals name="notification_delay_content_title_format">
        <item quantity="zero">No Delayed Trains</item>
        <item quantity="one">%1$s Delayed Train</item>
        <item quantity="other">%1$s Delayed Trains</item>
    </plurals>

    <string name="notification_delay_line_format">&lt;b&gt;%1$s (%2$s)&lt;/b&gt;: %3$s min</string>
    <string name="notification_delay_line_format_no_time">&lt;b&gt;%1$s&lt;/b&gt;: %2$s min</string>
    <string name="notification_delay_content_delimiter">,\u0020</string>
    <string name="notification_delay_content_format_no_time">%1$s</string>
    <string name="notification_delay_content_format">%1$s (%2$s)</string>

    <string name="snackbar_first_visit">Go to Settings to setup stations and notifications.</string>
    <string name="snackbar_first_visit_action_settings">Settings</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit</string>
    <string name="status_notification_disabled">No notifications</string>
    <string name="status_notification_enabled">Notifications from &lt;b&gt;%1$s&lt;/b&gt; to &lt;b&gt;%2$s&lt;/b&gt;</string>

    <string name="fragment_preferences_item_times">From &lt;b&gt;%1$s&lt;/b&gt; to &lt;b&gt;%2$s&lt;/b&gt;</string>

    <string name="preferences_station_picker_title">Select a station to add.</string>

</resources>
