<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.MultiSelectListPreferenceCompat
        android:key="@string/preferences_stations_key"
        android:title="@string/preferences_stations_title"
        android:summary="%s"
        android:dialogTitle="@string/preferences_stations_title"
        android:entries="@array/stations_names"
        android:entryValues="@array/stations_uics"
        android:defaultValue="@array/stations_default"
        />

    <CheckBoxPreference
        android:key="@string/preferences_notification_key"
        android:title="@string/preferences_notification_title"
        android:summary="@string/preferences_notification_summary"
        android:defaultValue="false"
        />

    <android.support.v7.preference.MultiSelectListPreferenceCompat
        android:dependency="@string/preferences_notification_key"
        android:entries="@array/times_names"
        android:entryValues="@array/times_values"
        android:key="@string/preferences_notification_times"
        android:summary="@string/preferences_notification_times_summary"
        android:title="@string/preferences_notification_times_title"
        android:defaultValue="@array/times_default"
        />

</PreferenceScreen>