<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fragment_preferences_item_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    >

    <TextView
        android:id="@+id/fragment_preferences_item_station_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/lorem_ipsum"
        android:textSize="@dimen/font_size_preferences_stations"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/fragment_preferences_item_expanded_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/fragment_preferences_item_bottom_height"
            android:orientation="vertical"
            android:padding="@dimen/margin_default"
            >

            <CheckBox
                android:id="@+id/fragment_preferences_item_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preferences_notification_title"
                android:textSize="@dimen/font_size_preferences_settings"
                />

            <Button
                android:id="@+id/fragment_preferences_item_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_preferences_item_times"
                android:textSize="@dimen/font_size_preferences_settings"
                android:gravity="start|center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:layout_marginLeft="@dimen/margin_big"
                android:layout_marginStart="@dimen/margin_big"
                android:textAllCaps="false"
                android:textStyle="normal"
                />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_preferences_item_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_preferences_item_bottom_height"
            android:layout_gravity="bottom"
            >

            <ImageButton
                android:id="@+id/fragment_preferences_item_expand_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/margin_small"
                android:src="@drawable/ic_chevron_down_grey600_24dp"
                />

            <ImageButton
                android:id="@+id/fragment_preferences_item_delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/margin_small"
                android:src="@drawable/ic_delete_grey600_24dp"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/fragment_preferences_item_notification_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginEnd="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginRight="44dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/status_notification_disabled"
                android:textSize="@dimen/font_size_small"
                />
        </FrameLayout>
    </FrameLayout>

</LinearLayout>